--- a/.gitignore
+++ b/.gitignore
@@ -159,3 +159,4 @@ cython_debug/
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
 cloud_functions/hello_world/.python-version
+cloud_functions/fastly_announce_purge/src/.python-version
