--- a/cloud_functions/fastly_announce_purge/src/requirements.txt
+++ b/cloud_functions/fastly_announce_purge/src/requirements.txt
@@ -1,3 +1,5 @@
 functions-framework
 arxiv-base @ git+https://github.com/arXiv/arxiv-base.git@145c956#egg=arxiv_base
 google-cloud-logging
+sqlalchemy>=2.0.26
+mysqlclient >=2.1
