--- a/cloud_functions/purge_on_bucket_change/src/requirements.txt
+++ b/cloud_functions/purge_on_bucket_change/src/requirements.txt
@@ -1,3 +1,7 @@
 functions-framework
-arxiv-base @ git+https://github.com/arXiv/arxiv-base.git@6bbf57e#egg=arxiv_base
+arxiv-base @ git+https://github.com/arXiv/arxiv-base.git@208295b6ae33c3e6b9db20298c80e8c27cf95d56#egg=arxiv_base
 google-cloud-logging
+requests
+google.api_core
+
+
