trigger off of bucket event

--- a/cloud_functions/purge_on_bucket_change/cicd/pubsub_steps.yaml
+++ b/cloud_functions/purge_on_bucket_change/cicd/pubsub_steps.yaml
@@ -9,7 +9,7 @@ steps:
            '--source', '${_SRCDIR}',
            '--runtime', 'python311',
            '--region', '${_REGION}',
-           '--trigger-topic', '${_PUBSUB_NAME}',
+           '--trigger-bucket', '${_BUCKET_NAME}',
            '--entry-point', '${_ENTRY_POINT}',
            '--service-account', '${_RUN_ACCOUNT}',
            '--env-vars-file', '${_ROOTDIR}/cicd/env.${_FUNCTION_NAME}.${_PROJECT_ID}.yaml',
