--- a/cloud_functions/fastly_announce_purge/src/requirements.txt
+++ b/cloud_functions/fastly_announce_purge/src/requirements.txt
@@ -1,4 +1,4 @@
-functions-framework
+functions-framework==3.*
 arxiv-base @ git+https://github.com/arXiv/arxiv-base.git@fa04631#egg=arxiv_base
 google-cloud-logging
 sqlalchemy>=2.0.26
