--- a/cloud_functions/purge_on_bucket_change/cicd/pubsub_steps.yaml
+++ b/cloud_functions/purge_on_bucket_change/cicd/pubsub_steps.yaml
@@ -3,7 +3,7 @@ steps:
   - name: 'google/cloud-sdk'
     id: Deploy
     entrypoint: gcloud
-    args: ['functions', 'deploy', '${_FUNCTION_NAME}',
+    args: ['functions', 'deploy', '${_OUTPUT_FUNCTION_NAME}',
            '--retry',
            '--gen2',
            '--source', '${_SRCDIR}',
